[gd_scene load_steps=15 format=3 uid="uid://rvpd60jtu10u"]

[ext_resource type="Texture2D" uid="uid://cg74bi1yhv7vv" path="res://Images/Enemies/splice.png" id="1_fwj6q"]
[ext_resource type="Script" path="res://Scenes/splice.gd" id="1_lrq4a"]
[ext_resource type="Texture2D" uid="uid://dhlqlpt0rtbw5" path="res://Images/Enemies/splice_leg_end.png" id="2_ob5pw"]
[ext_resource type="Texture2D" uid="uid://buuwlftab4na7" path="res://Images/Enemies/splice_head.png" id="2_uav1l"]
[ext_resource type="PackedScene" uid="uid://bw4lnil0db42v" path="res://Scenes/status_effects_bar.tscn" id="3_2nx1n"]
[ext_resource type="Texture2D" uid="uid://c0xct07ai2j21" path="res://Images/Enemies/splice_leg_start.png" id="3_xdbw1"]
[ext_resource type="Shader" path="res://Shaders/flash.gdshader" id="4_urju4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcuug"]
size = Vector2(152, 72)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nv7jl"]
resource_local_to_scene = true
shader = ExtResource("4_urju4")
shader_parameter/flash_color = Vector4(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_27k6l"]
resource_local_to_scene = true
shader = ExtResource("4_urju4")
shader_parameter/flash_color = Vector4(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="Animation" id="Animation_730hj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.8, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/leg_start1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.174533]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/leg_end1:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.174533]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/leg_start2:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.261799]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/leg_end2:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.261799]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/leg_start3:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.174533]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite/leg_end3:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.174533]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite/leg_start4:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.261799]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite/leg_end4:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.261799]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Sprite:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.8, 0.8)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Sprite/leg_end2:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-80, -25)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Sprite/leg_end4:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, -30)]
}

[sub_resource type="Animation" id="Animation_lpex4"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.75, 0.75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 23), Vector2(0, 27)]
}

[sub_resource type="Animation" id="Animation_3dk1i"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/leg_start1:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.174533, 0.261799, 0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/leg_end1:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.174533, 0.0, -0.174533]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/leg_start2:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.261799, 0.349066, 0.261799]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/leg_end2:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.261799, 0.0, -0.261799]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/leg_start3:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.174533, -0.261799, -0.174533]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/leg_end3:rotation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.174533, 0.0, 0.174533]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/leg_start4:rotation")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.261799, -0.349066, -0.261799]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite/leg_end4:rotation")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.261799, 0.0, 0.261799]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite:scale")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.9, 0.9), Vector2(0.8, 0.8)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite/leg_end2:position")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-80, -25), Vector2(-90, -35), Vector2(-80, -25)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Sprite/leg_end4:position")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(80, -30), Vector2(90, -35), Vector2(80, -30)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uajk1"]
_data = {
"RESET": SubResource("Animation_730hj"),
"idle": SubResource("Animation_lpex4"),
"jump": SubResource("Animation_3dk1i")
}

[node name="splice" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_lrq4a")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -11)
shape = SubResource("RectangleShape2D_pcuug")

[node name="Sprite" type="Node2D" parent="."]
scale = Vector2(0.8, 0.8)

[node name="leg_end1" type="Sprite2D" parent="Sprite"]
position = Vector2(-85, -60)
rotation = -0.174533
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ob5pw")

[node name="leg_end2" type="Sprite2D" parent="Sprite"]
position = Vector2(-80, -25)
rotation = -0.261799
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_ob5pw")

[node name="leg_end3" type="Sprite2D" parent="Sprite"]
position = Vector2(85, -60)
rotation = 0.174533
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ob5pw")
flip_h = true

[node name="leg_end4" type="Sprite2D" parent="Sprite"]
position = Vector2(80, -30)
rotation = 0.261799
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_ob5pw")
flip_h = true

[node name="leg_start1" type="Sprite2D" parent="Sprite"]
position = Vector2(-45, -60)
rotation = 0.174533
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_xdbw1")

[node name="leg_start2" type="Sprite2D" parent="Sprite"]
position = Vector2(-50, -30)
rotation = 0.261799
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_xdbw1")

[node name="leg_start3" type="Sprite2D" parent="Sprite"]
position = Vector2(45, -60)
rotation = -0.174533
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_xdbw1")
flip_h = true

[node name="leg_start4" type="Sprite2D" parent="Sprite"]
position = Vector2(50, -30)
rotation = -0.261799
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_xdbw1")
flip_h = true

[node name="Body" type="Sprite2D" parent="Sprite"]
material = SubResource("ShaderMaterial_nv7jl")
position = Vector2(0, -9)
texture = ExtResource("1_fwj6q")

[node name="Head" type="Sprite2D" parent="Sprite"]
material = SubResource("ShaderMaterial_27k6l")
position = Vector2(0, 23)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_uav1l")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.4

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="hp" type="Label" parent="."]
offset_left = -20.0
offset_top = 92.0
offset_right = 20.0
offset_bottom = 115.0
text = "hp"
horizontal_alignment = 1

[node name="StatusEffectsBar" parent="." instance=ExtResource("3_2nx1n")]
offset_top = 115.0
offset_bottom = 145.0

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uajk1")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
